# GDG

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.sqlx/: query-068041929cbbc8f87cb7df8d79948ad643d61cc081c9b40649c284a7ddbdbeb8.json  query-0b325bfcd1edcd617b0ff8447f3c808e769f014f197f91b471abaf1c58a7d798.json  query-2d96844d707baac6c33e88a4c97eaa572a128b71e3fbafd0df4706b902cebdf9.json  query-33127dae3ce4b17ed41eab57a9834b1863e6284487a467c52c7d02f4d33aebd7.json  query-50a5032af672907866b5e745d7a601edd670d556cf6a3be8b1bcf8cedc0e2bfb.json  query-56e533d26c39582dc1fe97ba10ac0e6b98b0d6e86d30551cc0dcfa23aa2a860b.json  query-5cd610704aaffd112f2bebfa8e3d1f0051bb208500bf23ded3a109e60dd96dbd.json  query-5f65481dadc46d27a35af8784840006dda6f456d3f1c9412f761727acb25bcf3.json  query-6def18310688123c63125179025ae4af251f25cff50e0c10d058ad3f41230aa6.json  query-71c27db90773376d1c6e58d35ee8421e1774798db876dc7402c5351bc51d66cc.json  query-94d32bd592c211afc528e452eecfe7b62d2fb4a9b26742b56e1ffcb0507b5eca.json  query-a72c2805705d8d851a26953193e6e1056d531dac57f05e3ece68b33a307761f3.json  query-af4e71b509fc6028a4f52a4836d6dea5ee98e4ebdd96c8db3649afd935cb5f3c.json  query-e57565859c7569abaf86d8590caafc7c467b5b83c47d57cfc7b4ae8dc2295e8a.json  query-e7aa93a7712e5a578625a42a429f3856885f7e86f952b812f4fca0c8a173f296.json  query-e881a966aba92b4716504b9bdd9fde6a8552c3060d872951f884fc6f6d269465.json  query-f5234116f227844beb9584725d782d0f76c0d3845e42af529dce48581c62dc0e.json  query-fff3e1424453f21035a8df332c581169dc053099992e98f3d415f83ac1b11412.json
api-types/: Cargo.toml
api-types/src/: auth.rs  chats.rs  lib.rs  users.rs
api-types/src/auth/: login.rs  register.rs
api-types/src/chats/: delete.rs  delete_code.rs  delete_submit_code.rs  get.rs  new.rs  new_code.rs  patch.rs  post.rs  ws.rs
api-types/src/chats/codes/: delete.rs  post.rs
api-types/src/chats/messages/: delete.rs  get.rs  patch.rs
api-types/src/users/: get.rs  me.rs  update.rs  update_password.rs
middleware/: Cargo.toml
middleware/src/: auth.rs  lib.rs
migrations/: 20260113111044_create_users.sql  20260113164713_add_bio_to_users.sql  20260113165525_add_updated_at.sql  20260114000000_make_bio_not_null.sql  20260114000001_set_bio_default.sql  20260114095541_create_chats.sql  20260114174139_create_chat_meta.sql  20260115154728_messages.sql  20260115192349_subscription.sql  20260117061931_add_edited_at_to_messages.sql
server/: .env  Cargo.toml
server/src/: main.rs  routes.rs  setup.rs
server/src/routes/: auth.rs  chats.rs  users.rs
server/src/routes/auth/: common.rs  login.rs  register.rs
server/src/routes/auth/register/: Serde.rs  api.rs  serde.rs
server/src/routes/chats/: codes.rs  delete.rs  delete_code.rs  get.rs  new.rs  new_code.rs  patch.rs  post.rs  submit_code.rs  ws.rs
server/src/routes/chats/codes/: delete.rs  post.rs
server/src/routes/chats/messages/: delete.rs  get.rs  patch.rs
server/src/routes/users/: get.rs  me.rs  patch.rs  update.rs  update_password.rs
utils/: Cargo.toml
utils/src/: cookies.rs  errors.rs  hashing.rs  jwt.rs  lib.rs
