[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
dotenvy = "0.15"
rand = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "time",
    "uuid",
] }
tokio = { version = "1.49", features = ["full"] }
api-types = { path = "../api-types" }
utils = { path = "../utils" }
middleware = { path = "../middleware" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
axum-extra = { version = "0.12", features = ["cookie"] }
