[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
dotenvy = "0.15"
rand = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "time",
    "uuid",
] }
tokio = { version = "1.49", features = ["full"] }
api-types = { workspace = true }
utils = { workspace = true }
middleware = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
futures-util = "0.3"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
time = { workspace = true }
tower_governor = { version = "0.8", default-features = false, features = ["axum", "tracing"] }
