[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
cookie = "0.18"
#chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
password-hash = "0.5"
rand_core = "0.9"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
tracing = "0.1"
