[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { workspace = true }
cookie = "0.18"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
password-hash = "0.5"
rand_core = "0.9"
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
